@@ -1,6 +1,10 @@
 20011207
  - (bal) PCRE no longer required.  Banished from the source along with
    fake-regex.h
+ - (bal) OpenBSD CVS Sync
+   - stevesk@cvs.openbsd.org 2001/12/06 18:02:32
+     [channels.c sshconnect.c]
+     shutdown(sock, SHUT_RDWR) not needed here; ok markus@
 
 20011206
  - (bal) OpenBSD CVS Sync
@@ -6998,4 +7002,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1688 2001/12/07 17:20:47 mouring Exp $
+$Id: ChangeLog,v 1.1689 2001/12/07 17:24:49 mouring Exp $
